fix bugs with visibility

--- a/www/css/header.pcss
+++ b/www/css/header.pcss
@@ -3,7 +3,7 @@
     margin: 0;
     outline: none;
     border: none;
-    font-family: 'Roboto';
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     list-style: none;
     text-decoration: none;
     --comBlack: #272D4E;
@@ -93,22 +93,23 @@ a {
                 height: auto;
             }
             & input[type="text"] {
-                width: 6.25vw;
+                width: 0;
                 height: 2.3vw;
                 border: 2px solid var(--comBlue);
                 border-radius: 5px;
-                transition: width .3s;
-                padding: 0 0.5vw;
                 font-size: 1vw;
-
+                visibility: hidden;
+                opacity: 0;
+                transition: width .3s, visibility .3s, opacity .3s;
+                padding: 0;
             }
-            &_hidden {
+            &_visible {
                 & input[type="text"] {
-                    width: 0 !important;
-                    visibility: hidden;
-                    opacity: 0;
-                    transition: width .3s, visibility .3s, opacity .3s;
-                    padding: 0;
+                    width: 6.25vw;
+                    visibility: visible;
+                    opacity: 1;
+                    padding: 0 0.5vw;
+                    transition: width .3s;
                 }
             }
         }
@@ -148,7 +149,29 @@ a {
     .header {
         z-index: 900;
         position: fixed;
+
+        &_visible {
+            & .header__wrapper {
+                opacity: 1;
+                visibility: visible;
+                transform: rotateY(0);
+                transition: transform .3s, opacity .3s, visibility .1s;
+            }
+            & .header__mobile-button {
+                & > div {
+                    &:first-child {
+                        transform: rotateZ(45deg) translateX(10px);
+                    }
+                    &:last-child {
+                        transform: rotateZ(-45deg) translateX(10px);
+                    }
+                }
+            }
+        }
         &__wrapper {
+            opacity: 0;
+            visibility: hidden;
+            transform: rotateY(90deg);
             justify-content: space-evenly;
             width: 100%;
             height: 100vh;
@@ -160,7 +183,7 @@ a {
             top: 0;
             box-sizing: border-box;
             padding: 15px 0;
-            transition: transform .3s, opacity .1s, visibility .1s;
+            transition: transform .3s, opacity .1s, visibility .3s;
         }
         &__logo {
             padding: 15px 0;
@@ -189,11 +212,16 @@ a {
             order: -1;
 
             &-search {
+                &_visible {
+                    & input[type="text"] {
+                        width: 200px;
+                    }
+                }
                 & input[type="text"] {
-                    width: 200px;
                     height: 40px;
                     font-size: 20px;
                     margin-left: 10px;
+
                 }
                 & img {
                     width: 30px;
@@ -221,28 +249,10 @@ a {
                 transition: transform .2s;
 
                 &:first-child {
-                    transform: rotateZ(45deg) translateX(10px);
+                    transform: rotateZ(0) translateX(0);
                 }
                 &:last-child {
-                    transform: rotateZ(-45deg) translateX(10px);
-                }
-            }
-        }
-        &_hidden {
-            & .header__wrapper {
-                opacity: 0;
-                visibility: hidden;
-                transform: rotateY(90deg);
-                transition: transform .3s, opacity .3s, visibility .3s;
-            }
-            & .header__mobile-button {
-                & > div {
-                    &:first-child {
-                        transform: rotateZ(0) translateX(0);
-                    }
-                    &:last-child {
-                        transform: rotateZ(0) translateX(0);
-                    }
+                    transform: rotateZ(0) translateX(0);
                 }
             }
         }
